tests/paczka1/small_fuzzy/42892651.err
Error in line 5: 0j2GF1ch S417 20,9
Error in line 12: PlkS S176 09,9
Error in line 14: S417 A814 42,5
Error in line 9: FGauISpxNR3 S364 14,0
